# canvy

./: .gitignore  CHANGELOG.md  README.md  \  pyproject.toml  pyrightconfig.json
.github/workflows/: pypi.yml  release-tag.yml  release.yml
src/cansync/: __init__.py  const.py  main.py  types.py  utils.py
src/cansync/scripts/: __init__.py  downloader.py  grades.py  teacher.py
src/cansync/tui/: __init__.py  tui.py
src/canvy/: __init__.py  const.py  main.py  types.py  utils.py
src/canvy/scripts/: __init__.py  downloader.py  teacher.py
src/canvy/tui/: const.py  download.py  help.py  login.py  main.py  mainpage.py  settings.py  tui.py
tests/: conftest.py  test_main.py  test_teacher.py  test_types.py  test_utils.py
tests/scripts/: test_downloader.py  test_teacher.py
